# thinpiproject

./: CHANGELOG.md  CMakeLists.txt  README.md  README.txt  build.sh  meson.build  thinpi.avprj
data/: CMakeLists.txt  ThinPi.desktop  us.kmprojects.thinpi.gschema.xml
data/interface/: CMakeLists.txt  connect-manager-debug.ui  settings.ui
data/local/: CMakeLists.txt  tprdp
data/local/config/: settings.xml  thinpi.xml
data/pixmaps/: CMakeLists.txt
doc/: CMakeLists.txt
po/: CMakeLists.txt  POTFILES.in
scripts/debian/: build.sh  deps.sh
src/: CMakeLists.txt  meson.build  thinpi.vala
src/classes/: tppublic.vala  tpwindow.vala
src/classes/connection/: tpconnection.vala
src/interface/: tpconfig.vala  tpconnect.vala  tpsettings.vala
src/utils/: tpsettings-utils.vala  tpwindow-utils.vala  tpxml.vala
